--- a/game.html
+++ b/game.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8">
 	<title>Game</title>
 	<style>
-		canvas{
+		body{
 			background-color: black;
 		}
 	</style>
 </head>
-<body>
-	<canvas id="main" width="400" height="400"> Your Browser doesnt support Canvas</canvas>
+<body id="body">
+	<canvas id="main" width="400" height="400" > Your Browser doesnt support Canvas</canvas>
 	<script type="text/javascript" src="game.js"></script>
 </body>
 </html>
